beatdrift-cli-master_copy/beatdrift-cli-master/beatdrift-cli/listdata2/demo2/ec2_DescribeSecurityGroups_us-east-1_None.json
{"service": "ec2", "region": "us-east-1", "profile": null, "operation": "DescribeSecurityGroups", "response": {"SecurityGroups": [{"Description": "default VPC security group", "GroupName": "default", "IpPermissions": [{"IpProtocol": "-1", "IpRanges": [], "Ipv6Ranges": [], "PrefixListIds": [], "UserIdGroupPairs": [{"GroupId": "sg-00fd6fc8117cbecd5", "UserId": "637333041330"}]}], "OwnerId": "637333041330", "GroupId": "sg-00fd6fc8117cbecd5", "IpPermissionsEgress": [{"IpProtocol": "-1", "IpRanges":  [...]
